#336 Apply suggestions from code review
Co-authored-by: Dennis Hendriks <dh_tue@hotmail.com>